#9 [partial] [spider] json python module for multiple trajectories

--- a/scripts/toJSON/toJSON.ipynb
+++ b/scripts/toJSON/toJSON.ipynb
@@ -27,18 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '-f'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-50fe00d517b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '-f'"
+     ]
     }
    ],
    "source": [
@@ -48,12 +49,24 @@
     "import sys\n",
     "\n",
     "filename = sys.argv[1]\n",
-    "with open(\"multipleTraces\", \"r\") as file:\n",
+    "with open(filename, \"r\") as file:\n",
     "    names = file.readline()\n",
     "    a = file.read()\n",
     "    trajectories = a.split(\"\\n\\n\")\n",
-    "len(trajectories)    \n"
+    "    \n",
+    "tras=[np.array([a.split() for a in tra.split(\"\\n\")]) for tra in trajectories]\n",
+    "\n",
+    "traces = [{\"time\": trasi[:,0].tolist(), \"values\": trasi[:, 1:].transpose().tolist(), \"variables\": names.strip(\"\\n\").split()} for trasi in tras]\n",
+    "with open(filename+\".json\", \"w\") as file:\n",
+    "    file.write(json.dumps({\"traces\":traces}))    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
